force-app/main/default/objects/Custom_Report__c/Custom_Report__c.object-meta.xml
<CustomObject>
    <label>Custom Report</label>
    <nameField>
        <label>Custom Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>