force-app/main/default/objects/Custom_Report__c/fields/Date_Time_To_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_To_Time__c</fullName>
    <label>Date Time To Time</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>