force-app/main/default/objects/Custom_Report__c/fields/Editable_Fields__c.field-meta.xml
<CustomField>
    <fullName>Editable_Fields__c</fullName>
    <label>Editable Fields</label>
    <type>TextArea</type>
</CustomField>