force-app/main/default/objects/Custom_Report__c/fields/Filter_By__c.field-meta.xml
<CustomField>
    <fullName>Filter_By__c</fullName>
    <label>Filter By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dates</fullName>
            </value>
            <value>
                <fullName>Biweek Reimbursement</fullName>
            </value>
            <value>
                <fullName>Monthly Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>