force-app/main/default/objects/Custom_Report__c/fields/Four_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Four_Decimal_Places__c</fullName>
    <label>Four Decimal Places</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>