force-app/main/default/objects/Custom_Report__c/fields/isConcur__c.field-meta.xml
<CustomField>
    <fullName>isConcur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConcur</label>
    <type>Checkbox</type>
</CustomField>