force-app/main/default/objects/Custom_Report__c/fields/isLockReport__c.field-meta.xml
<CustomField>
    <fullName>isLockReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLockReport</label>
    <type>Checkbox</type>
</CustomField>