force-app/main/default/objects/Custom_Report__c/fields/Numeric_Fields__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Fields__c</fullName>
    <label>Numeric Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>