force-app/main/default/objects/Custom_Report__c/fields/Report_Header__c.field-meta.xml
<CustomField>
    <fullName>Report_Header__c</fullName>
    <description>Report Header</description>
    <inlineHelpText>Report Header with comma sepration</inlineHelpText>
    <label>Report Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>