force-app/main/default/objects/Custom_Report__c/fields/Report_Soql__c.field-meta.xml
<CustomField>
    <fullName>Report_Soql__c</fullName>
    <label>Report Soql</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>