force-app/main/default/objects/Custom_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Created Between 2 Dates</fullName>
            </value>
            <value>
                <fullName>Contact Activation Between 2 Dates</fullName>
            </value>
            <value>
                <fullName>Contact Deactivation Between 2 Dates</fullName>
            </value>
            <value>
                <fullName>Reimbursements Created Between 2 Dates</fullName>
            </value>
            <value>
                <fullName>Reimbursements Between 2 Deactivation Dates</fullName>
            </value>
            <value>
                <fullName>Reimbursements Between 2 Dates For Month Range</fullName>
            </value>
            <value>
                <fullName>Mileages Between 2 Trip Dates</fullName>
            </value>
            <value>
                <fullName>Mileages Created Between 2 Dates</fullName>
            </value>
            <value>
                <fullName>Mileages Between 2 Deactivation Dates</fullName>
            </value>
            <value>
                <fullName>Mileages Between 2 Dates for Month Range</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Without Date Range</fullName>
            </value>
            <value>
                <fullName>BiWeek Reimbursement Start and EndDate</fullName>
            </value>
            <value>
                <fullName>Reimbursement Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>