force-app/main/default/objects/Custom_Report__c/fields/Show_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Lock_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Lock Date</label>
    <type>Checkbox</type>
</CustomField>