force-app/main/default/objects/Custom_Report__c/fields/Use_Bussiness_Unit__c.field-meta.xml
<CustomField>
    <fullName>Use_Bussiness_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Bussiness Unit</label>
    <type>Checkbox</type>
</CustomField>