force-app/main/default/objects/Custom_Report__c/fields/Use_Driver_List__c.field-meta.xml
<CustomField>
    <fullName>Use_Driver_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Driver List</label>
    <type>Checkbox</type>
</CustomField>