force-app/main/default/objects/Custom_Report__c/fields/Use_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Use_Payment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Payment Status</label>
    <type>Checkbox</type>
</CustomField>